# 3-concurrency-JafarMustafazada

assignment_3/: README.md
assignment_3/pixelization_py/: pixelization.py  requirements.txt
assignment_3/pixelization_x64/: .gitignore  CMakeLists.txt  CMakeSettings.json
assignment_3/pixelization_x64/source/: main.cpp
assignment_3/pixelization_x64/src/: main.cpp
assignment_3/pixelization_x64/src/opencvfolder/: CMakeLists.txt
